Fixed menu button not showing initially.

--- a/src/app.css
+++ b/src/app.css
@@ -23,6 +23,10 @@ html{
     letter-spacing: -.04em;
 }
 
+body{
+    min-height: 100vh;
+}
+
 *{
     box-sizing: border-box;
 }
